Refactor and rename compare_api_vs_local.py; move payload.json to outputs/
- Renamed compare_api_vs_local.py → compare_api_vs_local_predictions.py
- Refactored comparison logic: cleaner batching, standardized predictions, aligned smoothed y_act
- Added helper functions for artifact loading, API/local prediction, and ground truth construction
- Made compare script callable with or without starting Flask API
- Updated make_payload.py to write payload.json to outputs/ and create folder if missing
- Extended .gitignore to ignore outputs/* but keep outputs/.gitkeep

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,8 @@ changes.txt
 *.pkl
 *.joblib
 payload.json
+outputs/*
+!outputs/.gitkeep
 # -------------------------------
 # Other
 # -------------------------------
