Refactor data pipeline and inference logic for modularity, clarity, and robustness
- Improved  to track only relevant scripts (make_payload, train_xgb)
- Updated  to support filtering only on training set
- Refactored  to allow customizable target column names
- Overhauled :
  • Added LoggingMixin and schema-aware logic
  • Enforced consistent row ordering and optional datetime handling
  • Made smoothing and filtering fully configurable
- Extended  for flexible inference:
  • Supports adding actual targets () via merge
  • Improved validation and documentation
- Enhanced :
  • Explicit row order for reproducibility
  • Added flags to control feature inclusion
  • Exported states more defensively with  flag
- Introduced new  class:
  • Unified prediction API for production use
  • Handles warm-up trimming and canonical output formatting
  • Added original runtime as  for compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,15 @@ payload.json
 outputs/*
 !outputs/.gitkeep
 # -------------------------------
+# Scripts
+# -------------------------------
+
+scripts/*
+!scripts/make_payload.py
+!scripts/make_payload_deprecated.py
+!scripts/train_xgb.py
+
+# -------------------------------
 # Other
 # -------------------------------
 *.sqlite3
