Local vs. API predictions validated — both yield near-identical results under all test cases.
- Added  to compare offline vs. REST API predictions.
- Supports visual validation with a flexible scatterplot:
  - Can toggle between  and
  - Optional filtering by  via index (e.g., sensor_idx=3)
- Refactored :
  - Improved control over  usage and fallback logic
  - Trimmed and cleaned parameter flow and docstring clarity
  - Added stronger input validation and deterministic sorting
- Updated  to allow tracking of the new comparison script

--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ scripts/*
 !scripts/make_payload.py
 !scripts/make_payload_deprecated.py
 !scripts/train_xgb.py
-
+!scripts/compare_api_vs_local.py
 # -------------------------------
 # Other
 # -------------------------------
