Validate Docker-based deployment and finalize inference API
- Refactored Dockerfile: added comments, reordered instructions, and fixed Gunicorn CMD
- Integrated InferenceRuntime into package's top-level __init__.py
- Enabled warm-up trimming by default in inference runtime
- Exposed predict_total_series() and warm-up trimming as public API
- Cleaned up legacy code and comments across service and feature modules
- Added /predict route to Flask app with validation and JSON response
- Updated optional dependency versions in pyproject.toml
- Removed unused zipped feature archive (features.zip)
- Added save_repo_to_zip.txt to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/
 # -------------------------------
 *.log
 changes.txt
+save_repo_to_zip.txt
 # -------------------------------
 # Data files
 # -------------------------------
