--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,5 @@ where = ["traffic_flow"]               # auto-discover sub-packages
 [project.optional-dependencies]
 service = [
   "flask>=2.3,<3.0",
-  "gunicorn>=21,<22"
+  "gunicorn>=21,<22",
 ]
