Refactor Docker setup and add service dependencies
- Updated Dockerfile to copy Gunicorn config into image and switch to using  for cleaner startup
- Removed unused docker-compose.yml
- Added  extra in package metadata with Flask and Gunicorn dependencies
- Included  in .gitignore
- Registered new inference module: prediction_protocol.py

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ save_repo_to_zip.txt
 payload.json
 outputs/*
 !outputs/.gitkeep
+resp.json
 # -------------------------------
 # Scripts
 # -------------------------------
