Last commit before restructuring folders — deps pinned, Docker slimmed, evaluator updated
- Pin core deps + add extras in pyproject
- Slim Dockerfile & unify ARTIFACT_PATH under /app/artifacts
- Preserve df_raw/test in data loader
- Evaluator: canonical predictions require df_raw
- Clean inplace ops, remove dead code/files

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ scripts/*
 !scripts/make_payload_deprecated.py
 !scripts/train_xgb.py
 !scripts/compare_api_vs_local.py
+!scripts/gen_constraints.py
 # -------------------------------
 # Other
 # -------------------------------
