--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-package-dir = {"" = "traffic_flow"}
+package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
-where = ["traffic_flow"]
+where = ["src"]
+include = ["traffic_flow*"]
