--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,27 @@
 [project]
 name = "traffic-flow"
 version = "0.1.0"
-requires-python = ">=3.10,<3.11"
+requires-python = ">=3.10,<3.12"
+
 dependencies = [
-  "numpy>=1.26.4,<1.27",
-  "pandas>=2.2.2,<2.3",
-  "pyarrow>=16.1.0,<17",
-  "scipy>=1.11.4,<1.12",
-  "scikit-learn>=1.4.2,<1.5",
-  "xgboost>=2.0.3,<2.1",
-  "joblib>=1.4.2,<1.5",
-  "flask>=2.3.3,<2.4",
+  "numpy>=1.26,<1.27",
+  "pandas>=2.0,<3.0",
+  "scipy>=1.11,<1.12",
+  "scikit-learn>=1.4,<1.5",     # compatible with kserve’s 1.4.0 pin
+  "xgboost>=2.0,<3.0",
+  "joblib>=1.4,<2.0",
   "requests>=2.31,<3",
-  "fastparquet>=2024.5.0,<2025.0.0",
-  "nbformat>=5.10,<6"
+  "nbformat>=5.10,<6"           
 ]
 
 [project.optional-dependencies]
 service = [
+  "flask>=2.3.3,<2.4",
   "gunicorn>=21.2,<22"
+]
+parquet = [
+  "pyarrow>=16.1.0,<17",
+  "fastparquet>=2024.5.0,<2025.0.0"
 ]
 vis = [
   "plotly>=5.19,<6",
