feat(deep): refactor to seq2one pipeline, add evaluation, and platform TF install
- windowing: introduce TFMultiSeriesSeq2OneBuilder with time encodings and
  optional custom features; exposes single-horizon (t+H) targets and richer
  meta for evaluation.
- experiment: rewrite as TrafficDeepExperiment using InitialTrafficDataLoader
  and TrafficDeepSplitInterface; add per-sensor result assembly, aggregated
  metrics, and artifacts (history/metrics/predictions).
- evaluation: add ModelEvaluator + assemble_results_dataframe improvements to
  handle absolute/delta spaces and (N,) vs (N,F) base_values.
- custom_features: add adapt_single_series_context_fn and
  make_per_sensor_context_fn for demand/context features on wide frames.
- __init__: update exports to TrafficDeepSplitInterface and
  TFMultiSeriesSeq2OneBuilder.
- env: add platform-conditional TensorFlow (Linux CUDA, macOS base + Metal)
  under pip section in environment.yml.
- gitignore: adjust patterns (review required).

BREAKING CHANGE:
- Renamed builder to TFMultiSeriesSeq2OneBuilder and experiment to
  TrafficDeepExperiment; updated __all__ and imports accordingly. Config
  changed (seq_len/horizon_minutes, demand context fields).

--- a/environment.yml
+++ b/environment.yml
@@ -18,3 +18,10 @@ dependencies:
   - gunicorn=21.2.0
   - requests>=2.31,<3 
   - seaborn>=0.13,<0.14
+  - pip:
+      # Linux (NVIDIA): TF with bundled CUDA/cuDNN
+      - 'tensorflow[and-cuda]>=2.16,<2.19; platform_system == "Linux"'
+      # macOS (both Apple silicon & Intel): base TF
+      - 'tensorflow>=2.16,<2.19; platform_system == "Darwin"'
+      # macOS GPU via Metal plugin
+      - 'tensorflow-metal>=1.1; platform_system == "Darwin"'
