--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
   - gunicorn=21.2.0
   - requests>=2.31,<3 
   - seaborn>=0.13,<0.14
+  - filelock 
   - pip:
       # Linux (NVIDIA): TF with bundled CUDA/cuDNN
       - 'tensorflow[and-cuda]>=2.16,<2.19; platform_system == "Linux"'
