--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ scripts/*
 !scripts/gen_constraints.py
 !scripts/compare_api_vs_local.py
 !scripts/compare_xgb_vs_lstm.ipynb
+!scripts/tabular_time_cyc_sweep.py
 # -------------------------------
 # Other
 # -------------------------------
